--- a/src/index.css
+++ b/src/index.css
@@ -152,6 +152,40 @@ body{
   background: #64ffda;
 }
 
+.sign-in {
+  padding: 3px 5px;
+  border: 1px solid grey;
+  font-weight: 600;
+  border-radius: 5px;
+  font-size: 1rem;
+  margin: 0.5rem 0.5rem 0 0;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  opacity:0.9;
+  color: #64ffda;
+}
+
+.sign-up {
+  padding: 3px 5px;
+  font-weight: 600;
+  border-radius: 5px;
+  font-size: 1rem;
+  margin: 0.5rem 0.5rem 0 0;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  color: #ccd6f6;
+  border: 1px solid grey;
+}
+
+.sign-in:hover, .sign-up:hover {
+  color:#1f2937;
+  transform: scale(0.93);
+  background-color: #64ffda;
+  border:1px solid #64ffda;
+}
+
 /*-------Search-Input section------*/
 .input-container .input-wrapper {
   max-width: auto;
