--- a/src/index.css
+++ b/src/index.css
@@ -152,7 +152,8 @@ body{
 }
 
 .link, .link-market, .link-profile {
-  padding: 0 10px
+  padding: 0 10px;
+  padding-left: 10px;
 }
 
 .link:hover{
@@ -203,6 +204,50 @@ body{
   border: 1px solid grey;
 }
 
+.profile {
+  padding: 3px 5px;
+  font-weight: 600;
+  border-radius: 5px;
+  font-size: 1rem;
+  margin: 0.5rem 0 0 0;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  color: #ccd6f6;
+  /* border: 1px solid grey; */
+}
+
+.sign-out {
+  padding: 3px 5px;
+  /* border: 1px solid grey; */
+  font-weight: 600;
+  border-radius: 5px;
+  font-size: 1rem;
+  margin: 0.5rem 0.5rem 0 0;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  opacity:0.9;
+  color: #ccd6f6;
+  
+  /* color: #64ffda; */
+}
+
+
+.profile:hover {
+  background:#64ffda;
+  color:#1f2937;
+}
+
+.sign-out:hover {
+  background:#64ffda;
+  color:#1f2937;
+}
+
+.profile:logo {
+  color:#1f2937;
+
+}
 .sign-bg,
 .nav-slide-bg {
   background-color: #15273a;
