--- a/src/index.css
+++ b/src/index.css
@@ -678,6 +678,12 @@ body{
   font-size: 14px;
 }
 
+.footer-div {
+  position: absolute;
+  bottom: 0;
+
+}
+
 /*--------------media query----------------- */
 @media (max-width: 1115px) {
   .top {
@@ -706,6 +712,18 @@ body{
         margin-right: 200px;
         text-align: center;
         align-items: center;
+        position: absolute;
+        bottom: 0; 
+
+        /* background:#374151;
+        text-align:center;
+        border-radius: 5px;
+        margin-top: 20px;
+        padding: 10px;
+        position: absolute;
+        bottom: 0; 
+        width: 100%;
+        border: 1px solid yellow; */
       }
 
       .gecko {
